--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
-  text-align: center;
+:root{
+    --padding-primary-mobile:20px;
+}
+.show{
+    display: block;
+}
+.hide{
+    display: none;
+}
+.btn{
+    color:#fff;
+    font-weight: bold;
+    background-color: hsl(180, 66%, 49%);
+    border:none;
+}
+.navigation{
+    padding:30px var(--padding-primary-mobile);
+}
+.navigation nav{
+    display: flex;
+    justify-content: space-between;
+}
+.ham-logo{
+    color:grey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.introduction-container{
+    padding:30px var(--padding-primary-mobile);
+    text-align: center;
+}
+.img-working{
+    width:100%;
+}
+.intro-header{
+    font-size: 2em;
+    line-height:1.1em;
+    font-weight: 700;
+}
+.intro-content{
+    color:hsl(255, 11%, 22%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn-getStart{
+    padding:.8em 2em;
+    font-size: 1em;
+    border-radius: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.linkForm-container{
+    padding:30px var(--padding-primary-mobile);
+}
+.linkForm{
+    display: flex;
+    flex-direction: column;
+    background: url(./images/bg-shorten-mobile.svg)  no-repeat fixed, hsl(257, 33%, 21%);
+    background-size:cover; 
+    padding:20px var(--padding-primary-mobile);
+    border-radius: 10px;
+}
+.linkForm-input{
+    height:30px;
+    padding:5px 10px;
+    border-radius: 5px;
+   border:none;
+   margin-bottom: 20px;
+}
+.linkForm-input::placeholder{
+    font-weight: 500;
+    font-size: 1em;
+}
+.btn-shorten{
+padding:.6em;
+font-size: 1em;
+border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.advanced-container{
+    text-align: center;
+    padding:20px var(--padding-primary-mobile);
+}
+.advertise-content{
+    font-size: 1em;
+    color:grey;
+    font-weight:400;
+}
+.advertise-card{
+    background-color: white;
+    height:250px;
+    position: relative;
+    margin-top:50px;
+    padding:0px 32px ;
+}
+.advertise-logo{
+    display: inline-block;
+    width:30px;
+    height:30px;
+    margin-top:-20px;
+    background-color: hsl(260, 8%, 14%);
+    padding:10px;
+    border-radius: 5px;
+}
+.advertise-card-header{
+    margin-top:40px;
+    text-align: center;
+}
+.advertise-card-content{
+    color:grey;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
